# SimplisticFSM

./: .gitignore  CMakeLists.txt  README.md
cmake/: sfsm-config.cmake.in  simplistic-fsm-config.cmake.in
examples/: CMakeLists.txt  lexer.cpp  semaphore.cpp
include/simplistic/: fsm.h
